Amending the bacground of h2 element in UWL tab.

--- a/University of West London.html
+++ b/University of West London.html
@@ -69,8 +69,8 @@
 	<div class="container-uwl">	
 		<section class="left-section-uwl">
 		  <h2>University of West London</h2>
-		  <p><a href="https://www.uwl.ac.uk/">Visit UWL website</a></p>	
-		  <p>I attended Group Research Project lectures at the St. Mary's Campus in Ealing, which provided access to fantastic facilities such as a well-equipped library and learning spaces, and lecture theatres. Additionally, the world-class tutors were highly knowledgeable and skilled in their fields, making it a pleasure to learn from them.</p>
+		  <p><a href="https://www.uwl.ac.uk/">Click here to visit UWL website</a></p>	
+		  <h2>I attended Group Research Project lectures at the St. Mary's Campus in Ealing, which provided access to fantastic facilities such as a well-equipped library and learning spaces, and lecture theatres. Additionally, the world-class tutors were highly knowledgeable and skilled in their fields, making it a pleasure to learn from them.</h2>
 		</section>
 		<section class="right-section-uwl">
 		</section>
