AMedning the body text

--- a/Group Presentation and Descriptive Statitistics.html
+++ b/Group Presentation and Descriptive Statitistics.html
@@ -60,15 +60,13 @@
     </nav>
 <header>
 	<h2>Skills for the IS Proffessional</h2>
-    <h3>Group Presentation and Descriptive Statitistics</h3>	
-	<h4>  I learned about group presentations and descriptive statistics. Group presentations involved working collaboratively with a team to deliver a presentation on a particular topic. This experience helped me to develop my communication and teamwork skills and taught me how to effectively present information to an audience. Descriptive statistics, on the other hand, involved the analysis and interpretation of numerical data using measures such as mean, median, mode, and standard deviation. This course equipped me with the skills to effectively summarize and present data in a meaningful way, which is essential in many fields such as data science and market research.</h4>
+    <h2>Group Presentation and Descriptive Statitistics</h2>	
 </header>	
 
 	
 <aside2>
-	<h2> Third week of the module involved presenting the project which I have delivered together with my group. In order to develop the project we had been conducting weekly group meetings. I really appreciated the idea of working alongside other students as it enabled exchanging different ideas and opinions. 
-The second part of the day consisted of covering the subject of statistics and mathematics with Fehmida Mohamedali.  
-</h2>
+	<h2>During group presentations, I gained experience in collaborating with peers to deliver cohesive and effective presentations. In addition, I learned how to analyze and present data using descriptive statistics, which involves organizing and summarizing data in order to better understand trends and patterns. These skills have been valuable in both academic and professional settings, allowing me to effectively communicate complex information to diverse audiences.</h2>
+
 	
 </aside2>
  </body>
