Correcting the name of the tab to 'Certificates' in the NAV bar

--- a/CSS Structure II.html
+++ b/CSS Structure II.html
@@ -52,10 +52,10 @@
                     </li> 
                 </ul>
             </li>
-            <li><a href="tickets.html">CV</a></li>
-    		<li><a href="tickets.html">University of West London</a></li>
+            <li><a href="Certificates.html">Certificates</a></li>
+    		<li><a href="University of West London.html">University of West London</a></li>
 			<li><a href="HyperionDev.html">HyperionDev</a></li>
-    		<li class="lastitem"><a href="aboutus.html">About Me</a></li>         
+    		<li class="lastitem"><a href="About Me.html">About Me</a></li>         
     	</ul>
     </nav>
 <header>
