--- a/HTML and CSS Structure.html
+++ b/HTML and CSS Structure.html
@@ -52,7 +52,7 @@
                     </li> 
                 </ul>
             </li>
-            <li><a href="CV.html">CV</a></li>
+            <li><a href="Certificates.html">Certificates</a></li>
     		<li><a href="University of West London.html">University of West London</a></li>
 			<li><a href="HyperionDev.html">HyperionDev</a></li>
     		<li class="lastitem"><a href="About Me.html">About Me</a></li>         
