Updating the footer

--- a/index.html
+++ b/index.html
@@ -237,13 +237,11 @@
 </main>
     <footer><!--footer section//-->
 		
-        <a href="https://www.facebook.com/sebastian.gasior.18/"><img src="images/Facebook-Logo.png" alt="Facebook Logo"></a>
-		
 		<a href="https://www.linkedin.com/in/sebastiangasior/"><img src="images/Linkedin.png" alt="Linkedin Logo"></a>
 		
 		<a href = "mailto: sebastian.gasior01@gmail.com"><img src="images/Outlook.jpg" alt="Outlook Logo"></a>
 		
-		<p>If you are interested in my profile then why don't you go on my social profiles -      Linkedin and Facebook where you can find even more about me </p> <br>
+		<p>If you are interested in my profile then why don't you go on my social profile in Linkedin where you can find even more about me </p> <br>
 		<p1>&copy; Copyright SG 2022 London </p1>
     </footer>
 </body>
